@startuml
skinparam classAttributeIconSize 0
title ElectroShop - LLD UML (backend/shop)

' Models
class Category {
  +id: AutoField
  +name: CharField
  __str__()
}

class Product {
  +id: AutoField
  +name: CharField
  +purchase_price: FloatField
  +selling_price: FloatField
  +stock: IntegerField
  +created_at: DateTimeField
  __str__()
}

class Sale {
  +id: AutoField
  +invoice_number: CharField
  +quantity: PositiveIntegerField
  +discount: FloatField
  +tax_percent: FloatField
  +total_amount: FloatField
  +sale_date: DateTimeField
  +payment_method: CharField
  +customer_name: CharField
  +generate_invoice_number()
  +save()
  +delete()
}

class Expense {
  +id: AutoField
  +title: CharField
  +category: CharField
  +amount: FloatField
  +expense_date: DateTimeField
  __str__()
}

' Relationships
Product --> Category : category (FK)
Sale --> Product : product (FK)

' Serializers
package "Serializers" {
  class CategorySerializer <<serializer>>
  class ProductSerializer <<serializer>>
  class SaleSerializer <<serializer>>
  class ExpenseSerializer <<serializer>>
  class RegisterSerializer <<serializer>>
}

CategorySerializer ..> Category
ProductSerializer ..> Product
SaleSerializer ..> Sale
ExpenseSerializer ..> Expense
RegisterSerializer ..> User : creates

' Views / API endpoints
package "Views (DRF)" {
  class ProductListCreateView <<view>>
  class ProductDetailView <<view>>
  class SaleListCreateView <<view>>
  class SaleDetailView <<view>>
  class ExpenseListCreateView <<view>>
  class ExpenseDetailView <<view>>
  class CategoryListCreateView <<view>>
  class register_user <<view function>>
}

ProductListCreateView ..> ProductSerializer
ProductDetailView ..> ProductSerializer
SaleListCreateView ..> SaleSerializer
SaleDetailView ..> SaleSerializer
ExpenseListCreateView ..> ExpenseSerializer
ExpenseDetailView ..> ExpenseSerializer
CategoryListCreateView ..> CategorySerializer
register_user ..> RegisterSerializer

note right of Sale
  Key behaviors:
  - Validates and updates Product.stock when saving/deleting
  - Auto-generates `invoice_number` using date + sequence
  - Ensures final_amount >= 0 and stock availability
end note

note left of SaleSerializer
  Concurrency:
  - `SaleSerializer.create` uses `transaction.atomic()` and
    `select_for_update()` to lock Product row and prevent
    race conditions when multiple sales created concurrently.
end note

@enduml
